# HRM

./: .gitignore  ReadME.md  dockerfile  pyproject.toml
app/: main.py
app/data/: data.py
app/models/: models.py
app/routes/: analysis_route.py  jobs_routes.py  resume_routes.py  sync_routes.py
app/service/: analysisService.py  jobs.py  resume.py  syncService.py
app/utils/: database.py
app/variables/: variables.py
